--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,27 @@
           "ignoreFailures": true
         }
       ]
+    },
+    {
+      "name": "Debug main.exe (Full Build)",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/compiled/main.exe",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "miDebuggerPath": "C:/msys64/ucrt64/bin/gdb.exe",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ],
+      "preLaunchTask": "Build with g++"
     }
   ]
 }
