--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,6 +24,43 @@
             },
             "detail": "Задача создана отладчиком."
         },
+        //компиляция всех cpp
+        {
+            "label": "Build with g++",
+            "type": "shell",
+            "command": "g++",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "main.cpp",
+                "collector\\collectorr.cpp",
+                "collector\\commands_coll.cpp",
+                "-o",
+                "compiled\\main.exe",
+                "-lws2_32",
+                "-lnetapi32",
+                "-lole32",
+                "-loleaut32",
+                "-lwbemuuid",
+                "-liphlpapi"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": "$gcc"
+        }
     ],
     "version": "2.0.0"
 }
