ram пофикшено, но теперь тип шины сломан

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,6 +31,7 @@
             "command": "g++",
             "args": [
                 //статическая линковка стандартной библиотеки
+                "-static",
                 "-static-libgcc",
                 "-static-libstdc++",
                 //
