--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -35,6 +35,9 @@
                 "-static-libgcc",
                 "-static-libstdc++",
                 //
+                "-ID:\\path\\to\\vcpkg\\installed\\x64-windows\\include \\",
+                "-LD:\\path\\to\\vcpkg\\installed\\x64-windows\\lib \\",
+                "-lsodium",
                 "-DWIN32_LEAN_AND_MEAN",
                 "-D_WIN32_WINNT=0x0A00",
                 "-DWINVER=0x0A00",
@@ -43,10 +46,13 @@
                 "-g",
                 "main.cpp",
                 "commands_main.cpp",
+                "transport\\transport.cpp",
+                "transport\\layers.cpp",
+                "transport\\compressor\\lz4_handler.cpp",
+                "transport\\compressor\\chacha_handler.cpp",
+                "models\\connection.cpp",
                 "collector\\collectorr.cpp",
                 "collector\\commands_coll.cpp",
-                "transport\\transport.cpp",
-                "models\\connection.cpp",
                 "-o",
                 "compiled\\main.exe",
                 "-lws2_32",
