Работает отправка с архивированием и шифрованием; надо почистить мусор в transport

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -39,7 +39,8 @@
                 // Архивирование
                 "libs\\lz4\\lz4.c",
                 "libs\\lz4\\lz4hc.c",
-                //"-llz4",
+                "libs\\lz4\\lz4frame.c",
+                "libs\\lz4\\xxhash.c",
                 // Шифрование
                 // "",
                 "-DWIN32_LEAN_AND_MEAN",
