--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,9 +24,9 @@
             },
             "detail": "Задача создана отладчиком."
         },
-        //компиляция всех cpp программы
+        //компиляция Windows
         {
-            "label": "Build with g++",
+            "label": "Build Windows with g++",
             "type": "shell",
             "command": "g++",
             "args": [
@@ -58,6 +58,7 @@
                 "src\\models\\settings.cpp",
                 // Scenario
                 "src\\scenarios\\scenarios.cpp",
+                "src\\scenarios\\tests.cpp",
                 // Collector
                 "src\\collector\\windows\\collector.cpp",
                 "src\\collector\\windows\\helpers.cpp",
@@ -81,6 +82,31 @@
                 // Output
                 "-o",
                 "compiled\\main.exe",
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": "$gcc"
+        },
+        //компиляция Linux
+        {
+            "label": "Build Linux with g++",
+            "type": "shell",
+            "command": "g++",
+            "args": [
+                //статическая линковка стандартной библиотеки
             ],
             "group": {
                 "kind": "build",
